--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.16",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
