--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "next": "^13.2.5-canary.29",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "recoil": "^0.7.7",
